# grounding-toolkit

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  SUPPORT.md  pyproject.toml
docs/: ARCHITECTURE.md  PHASE_0_NOTES.md
examples/: 01_smoke.py  README.md
src/grounding/: __init__.py
src/grounding/adversarial/: __init__.py  perturbation.py  robustness.py
src/grounding/answer/: __init__.py  verifier.py
src/grounding/audit/: __init__.py  merkle_proof.py  reasoning_log.py
src/grounding/calibration/: __init__.py  dataset_schema.py  feedback_loop.py  tuner.py
src/grounding/citations/: __init__.py  provenance.py  span.py  structured_signature.py  web_verify.py
src/grounding/cli/: __init__.py  main.py
src/grounding/confidence/: __init__.py  bayesian.py  uncertainty.py
src/grounding/consensus/: __init__.py  quorum.py
src/grounding/constitutional/: __init__.py  rules.py
src/grounding/core/: __init__.py  cascade.py  ports.py  speculative.py  thresholds.py  types.py
src/grounding/crossdoc/: __init__.py  linker.py  retriever.py
src/grounding/definitional/: __init__.py  consistency.py
src/grounding/eval/: __init__.py  benchmark_runner.py  deepeval_adapter.py  rag_feedback.py  ragas_metrics.py  trulens_adapter.py
src/grounding/explainability/: __init__.py  conflict.py  evidence_pointer.py  reasoning_trace.py
src/grounding/language/: __init__.py  multilingual.py
src/grounding/multimodal/: __init__.py  figures.py  kv.py  signatures.py  tables.py
src/grounding/numerical/: __init__.py  derivation_check.py  number_extraction.py  ratio_consistency.py
src/grounding/provisioning/: __init__.py  manifest.yaml
src/grounding/spatial/: __init__.py  bbox.py
src/grounding/temporal/: __init__.py  date_grounding.py
src/grounding/testing/: __init__.py  factories.py  fixtures.py  matchers.py  smoke.py  stubs.py
src/grounding/tiers/: __init__.py  consensus.py  lexical.py  llm_judge.py  nli.py  semantic.py
src/grounding/tracking/: __init__.py  event_tracker.py
src/grounding_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/integration/: conftest.py
tests/parity/: test_sentinel_contract.py
tests/unit/: conftest.py  test_cli.py  test_provisioning.py  test_smoke.py  test_versions.py
tests/unit/adversarial/: test_perturbation.py  test_robustness.py
tests/unit/answer/: test_verifier.py
tests/unit/audit/: test_merkle_proof.py  test_reasoning_log.py
tests/unit/calibration/: test_dataset_schema.py  test_feedback_loop.py  test_tuner.py
tests/unit/citations/: test_provenance.py  test_span.py  test_structured_signature.py  test_web_verify.py
tests/unit/confidence/: test_bayesian.py  test_uncertainty.py
tests/unit/consensus/: test_quorum.py
tests/unit/constitutional/: test_rules.py
tests/unit/core/: test_cascade.py  test_source_pages.py  test_speculative.py  test_thresholds.py  test_types.py
tests/unit/crossdoc/: test_linker.py  test_retriever.py
tests/unit/definitional/: test_consistency.py
tests/unit/eval/: test_benchmark_runner.py  test_deepeval_adapter.py  test_rag_feedback.py  test_ragas_metrics.py  test_trulens_adapter.py
tests/unit/explainability/: test_conflict.py  test_evidence_pointer.py  test_reasoning_trace.py
tests/unit/language/: test_multilingual.py
tests/unit/multimodal/: test_figures.py  test_kv.py  test_signatures.py  test_tables.py
tests/unit/numerical/: test_derivation_check.py  test_number_extraction.py  test_ratio_consistency.py
tests/unit/spatial/: test_bbox.py
(+8 files in other folders)
